[package]
name = "hg-bz-prune"
description = "A helper to prune revisions that have been merged to mozilla-central"
version = "0.1.0"
authors = ["Michael Cooper <mythmon@gmail.com>"]
edition = "2018"
license = "MPLv2"
repository = "https://github.com/mythmon/hg-bz-prune"
keywords = ["mercurial", "bugzilla", "mozilla"]
categories = ["command-line-utilities", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
async-std = { version = "1.9.0", features = ["unstable"] }
clap = "3.0.0-beta.1"
reqwest = { version = "0.11.2", features = ["json", "rustls", "brotli"] }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.24"
tokio = { version = "1.3.0", features = ["full"] }
